removed string template references from readme